Fix overflow issue in safari

--- a/src/App.css
+++ b/src/App.css
@@ -12,7 +12,7 @@
   max-width: 50%;
 }
 
-td:nth-child(2) {
+tr td:nth-child(2) {
   max-width: 50vw;
   overflow-wrap: anywhere;
 }
